# scarlesstagging

./: .gitignore  README.md  ScarlessTagging.ipynb  primers.tsv  pyproject.toml  setup.cfg
examples/ipynb/: ScarlessTagging.ipynb
examples/py/: designgenomes.py  singleprimer.py
examples/py/tritrypdb-genomes-v68/: TbruceiLister427_2018_2a-mng-bsr.txt  TbruceiLister427_2018_2a-mng-pac.txt  TbruceiLister427_2018_2a-msc-bsr.txt  TbruceiLister427_2018_2a-msc-pac.txt  TbruceiLister427_2018_ppot-compatible.txt  TbruceiLister427_2a-mng-bsr.txt  TbruceiLister427_2a-mng-pac.txt  TbruceiLister427_2a-msc-bsr.txt  TbruceiLister427_2a-msc-pac.txt  TbruceiLister427_ppot-compatible.txt  TbruceiTREU927_2a-mng-bsr.txt  TbruceiTREU927_2a-mng-pac.txt  TbruceiTREU927_2a-msc-bsr.txt  TbruceiTREU927_2a-msc-pac.txt  TbruceiTREU927_ppot-compatible.txt  TbruceigambienseDAL972_2a-mng-bsr.txt  TbruceigambienseDAL972_2a-mng-pac.txt  TbruceigambienseDAL972_2a-msc-bsr.txt  TbruceigambienseDAL972_2a-msc-pac.txt  TbruceigambienseDAL972_ppot-compatible.txt  TcongolenseIL3000_2a-mng-bsr.txt  TcongolenseIL3000_2a-mng-pac.txt  TcongolenseIL3000_2a-msc-bsr.txt  TcongolenseIL3000_2a-msc-pac.txt  TcongolenseIL3000_ppot-compatible.txt
src/scarlesstagging/: __init__.py  scarlesstagging.py
